@@ -5,6 +5,8 @@ Version 0.8.5~dev
 	  logging output, closes: #3202.
 	* Reduce verbosity for exceptions derived from BaseJobRuntimeError,
 	  refs: #3415.
+	* Add BaseJob.BaseError to reduce verbosity of derived exceptions,
+	  closes: #3415.
 
 Version 0.8.4 Released on 2010/10/04
 
